# bgslibrary

./: .gitignore  README.md
example_linux/: CMakeLists.txt
example_macosx/: .CMakeLists.txt.swp  .bg_sub_lbmog.py.swp  CMakeLists.txt  bg_sub_lbmog.py  w_DPEigenbackgroundBGS.cpp  w_DPWrenGABGAS.cpp  w_LBAdaptiveSOM.cpp  w_LBMoG.cpp  w_adapBGS.cpp  w_mlayerBGS.cpp
package_bgs/: AdaptiveBackgroundLearning.cpp  AdaptiveBackgroundLearning.h  IBGS.h
package_bgs/dp/: DPEigenbackgroundBGS.cpp  DPEigenbackgroundBGS.h  DPWrenGABGS.cpp  DPWrenGABGS.h
package_bgs/jmo/: MultiLayerBGS.cpp  MultiLayerBGS.h
package_bgs/lb/: LBAdaptiveSOM.cpp  LBAdaptiveSOM.h  LBMixtureOfGaussians.cpp  LBMixtureOfGaussians.h
python/: BackGroundModel.py
